Wrapping up, known issue with slide start in mobile states…

--- a/src/packages/modules/ux-marketing-convergence-e14/css/_responsive-ux-marketing-convergence-e14.scss
+++ b/src/packages/modules/ux-marketing-convergence-e14/css/_responsive-ux-marketing-convergence-e14.scss
@@ -28,6 +28,15 @@
          height: $slideHeightTablet;
        }
 
+        .partner-products-backgrounds {
+          width: 100%;
+          height: $slideHeightTablet;
+
+          li{
+            height:$slideHeightTablet;
+          }
+        }
+
        .partner-products {
          float: none;
          width: 100%;
@@ -84,6 +93,16 @@
         float: none;
         width: 100%;
         height: $slideHeightPhone;
+      }
+
+      .partner-products-backgrounds {
+        width: 100%;
+        height: $slideHeightPhone;
+
+        li{
+          height: $slideHeightPhone;          
+        }
+
       }
 
       .partner-products {
